<resources>
    <string name="app_name">MobileDevCW</string>
    <string name="identify_the_car_make">Identify the car make</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="guess_the_car">Guess the car!</string>
    <string name="timer">Timer</string>
    <string name="random_image_from_image_list">Random Image from image list</string>
    <string name="identify">Identify</string>
    <string name="pause">Pause</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="hints">Hints</string>
    <string name="submit">Submit</string>
    <string name="_0">0</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="settings">Settings</string>
    <string name="rounds">Rounds</string>
    <string name="selectNoOfRounds">Select number of rounds</string>
    <string name="selectCar">Select the name of the car above</string>
    <string name="textview">TextView</string>
    <string name="select_number_of_rounds">Select number of rounds:</string>
    <string name="restart">Restart</string>
    <string name="type_here_the_name_of_the_car_above">Type here the name of the car above</string>
    <string name="type_a_letter">Type a letter</string>
</resources>