<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybg"
    tools:context=".GameThreeActivity">

    <TextView
        android:id="@+id/gameThreeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify_the_car_image"
        android:textColor="#00BFFF"
        android:textSize="40sp"
        app:fontFamily="cursive"
        app:layout_constraintTop_toBottomOf="@+id/timerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#00BFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/buttons_background"
        android:onClick="submitBtn"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNameTextView" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_button_bg"
        android:onClick="menuPopUp"
        android:text="@string/menu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/carImg1"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:contentDescription="@string/random_image_from_image_list"
        android:onClick="clickedImage1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameThreeTitle" />

    <ImageButton
        android:id="@+id/carImg3"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:contentDescription="@string/random_image_from_image_list"
        android:onClick="clickedImage3"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg2" />

    <ImageButton
        android:id="@+id/carImg2"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:contentDescription="@string/random_image_from_image_list"
        android:onClick="clickedImage2"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg1" />

    <TextView
        android:id="@+id/carNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg3" />

</androidx.constraintlayout.widget.ConstraintLayout>